--- a/event.html
+++ b/event.html
@@ -152,7 +152,7 @@
               친구도 나도 한달 구독료 공짜!
             </h1>
             <div class="section-hero__box__description--duration">
-              이벤트 진행기간 : 2021.04.01 ~ 2021.05.31
+              <span>이벤트 진행기간 : 2021.04.01 ~ 2021.05.31</span>
             </div>
             <p class="section-hero__box__description--text">
               친구에게 재밌는 인문학 컨텐츠가 가득한 휴머니즈를 추천해주세요.
@@ -169,48 +169,52 @@
         </div>
       </section>
       <section class="section-content">
-        <h3 class="heading-3 event-code__title">추천인 코드</h3>
-        <input type="text" class="event-code__input" />
-        <button class="btn-event">추천인 코드 발급받기</button>
+        <div class="event-code">
+          <p class="event-code__title">추천인 코드</p>
+          <input type="text" class="event-code__input" />
+          <button class="btn-submit event-code__btn">
+            추천인 코드 발급받기
+          </button>
+        </div>
         <div class="event-container">
-          <h3 class="heading-3">참여방법</h3>
+          <p class="event-container__title">참여방법</p>
           <figure class="event-step">
-            <figcaption>STEP 01</figcaption>
+            <figcaption class="event-step__caption">STEP 01</figcaption>
             <div class="event-step__box">
-              <h4 class="heading-4 event-step__box--title">
+              <p class="heading-4 event-step__box--title">
                 추천인 코드 발급받기
-              </h4>
+              </p>
               <p class="event-step__box--description">
                 메인 홈에서 로그인을 한 후 이벤트 상세 페이지에 접속하면 추천인
                 코드를 발급받을 수 있습니다.
               </p>
-              <p class="evnet-step__box--notice">
+              <p class="event-step__box--notice">
                 * 추천인 코드는 <strong>1회</strong>만 사용 가능합니다.
               </p>
             </div>
           </figure>
           <figure class="event-step">
-            <figcaption>STEP 02</figcaption>
+            <figcaption class="event-step__caption">STEP 02</figcaption>
             <div class="event-step__box">
-              <h4 class="heading-4 event-step__box--title">
+              <p class="heading-4 event-step__box--title">
                 친구에게 추천인 코드 공유하기
-              </h4>
+              </p>
               <p class="event-step__box--description">
                 발급받은 추천인 코드를 복사해서 친구에게 공유해주세요.
               </p>
             </div>
           </figure>
           <figure class="event-step">
-            <figcaption>STEP 03</figcaption>
+            <figcaption class="event-step__caption">STEP 03</figcaption>
             <div class="event-step__box">
-              <h4 class="heading-4 event-step__box--title">
+              <p class="heading-4 event-step__box--title">
                 한달 구독료 면제 혜택 받기
-              </h4>
+              </p>
               <p class="event-step__box--description">
                 마이페이지 쿠폰함에 등록된 친구추천 이벤트 쿠폰을 사용하면 한달
                 구독료 면제 혜택을 받으실 수 있습니다.
               </p>
-              <p class="evnet-step__box--notice">
+              <p class="event-step__box--notice">
                 * 이벤트 쿠폰은 피추천인이 신규 가입하면 자동으로 쿠폰함에
                 등록됩니다.
               </p>
