--- a/signup.html
+++ b/signup.html
@@ -332,7 +332,7 @@
             </div>
           </div>
         </div>
-        <button class="btn-signup">회원가입</button>
+        <button class="btn-submit btn-signup">회원가입</button>
       </form>
     </div>
     <footer class="footer">
