Add: mypage page layout (in progress)

--- a/subscribe.html
+++ b/subscribe.html
@@ -180,7 +180,7 @@
               </div>
               <h1 class="heading-1 card__price">월 5,000원</h1>
               <p class="card__month">3개월권 [첫 달 0원]</p>
-              <span class="card__discount">15%</span>
+              <div class="card__discount"><span>15%</span></div>
               <hr class="card__line" />
               <p class="card__notice">※ 3개월마다 15,000원 결제</p>
               <a href="#" class="btn card__btn">멤버십 구독하기</a>
@@ -188,7 +188,7 @@
             <div class="card card--3">
               <h1 class="heading-1 card__price">월 4,100원</h1>
               <p class="card__month">12개월권 [첫 달 0원]</p>
-              <span class="card__discount">30%</span>
+              <div class="card__discount"><span>30%</span></div>
               <hr class="card__line" />
               <p class="card__notice">※ 3개월마다 12,300원 결제</p>
               <a href="#" class="btn card__btn">멤버십 구독하기</a>
