--- a/mypage.html
+++ b/mypage.html
@@ -360,7 +360,23 @@
             </div>
           </div>
         </article>
-        <article class="article__coupon"></article>
+        <article class="article__coupon">
+          <h3 class="heading-4 article__coupon__title">현재 보유중인 쿠폰</h3>
+          <div class="coupon__box">
+            <p class="coupon__box__name">친구추천 이벤트</p>
+            <h5 class="heading-5 coupon__box__title">
+              멤버십 구독 한달 무료 쿠폰
+            </h5>
+            <p class="coupon__box__duration">
+              유효기간: 2021. 04. 01 ~ 2022. 04. 01
+            </p>
+            <p class="coupon__box__notice">
+              ※ 본 쿠폰은 <strong>1회만</strong> 사용 가능합니다.
+            </p>
+            <a href="#" class="coupon__box__use">사용하기</a>
+          </div>
+          <h3 class="heading-4 article__coupon__title">만료된 쿠폰</h3>
+        </article>
       </section>
     </main>
     <footer class="footer">
