--- a/login.html
+++ b/login.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/resources/slick/slick.css" />
     <link rel="stylesheet" href="/resources/slick/slick-theme.css" />
+    <script src="/resources/lib/jquery-3.6.0.min.js"></script>
+    <script defer src="/js/script.js"></script>
     <title>Humaniz</title>
     <link
       rel="apple-touch-icon"
