Add: list sidebar

--- a/list.html
+++ b/list.html
@@ -169,7 +169,7 @@
       <div class="main__list__container">
         <nav class="list-nav">
           <div class="list-nav__main-menu">
-            <a href="#" class="list-nav__main-menu__link">전체</a>
+            <a href="#" class="list-nav__main-menu__link default-open">전체</a>
           </div>
           <div class="list-nav__main-menu">
             <a href="#" class="list-nav__main-menu__link">주제별</a>
@@ -230,7 +230,7 @@
             </ul>
           </div>
         </nav>
-        <section class="section-all">
+        <section class="section-all active">
           <h3 class="heading-3 section-all__title">전체</h3>
           <div class="select__contents-order-select">
             <select name="order-select" id="contents-order-select">
@@ -437,7 +437,7 @@
             </div>
           </div>
         </section>
-        <section class="section-subject">
+        <section class="section-subject hidden">
           <h3 class="heading-3 section-subject__title">주제별</h3>
           <h5 class="heading-5 section-subject__sub-title">동양철학</h5>
           <div class="list-contents">
@@ -1415,7 +1415,7 @@
             </div>
           </div>
         </section>
-        <section class="section-age">
+        <section class="section-age hidden">
           <h3 class="heading-3 section-age__title">연령별</h3>
           <h5 class="heading-5 section-age__sub-title">10대</h5>
           <div class="list-contents">
@@ -2393,7 +2393,7 @@
             </div>
           </div>
         </section>
-        <section class="section-theme">
+        <section class="section-theme hidden">
           <h3 class="heading-3 section-theme__title">테마별</h3>
           <h5 class="heading-5 section-theme__sub-title">미디어 속 인문학</h5>
           <div class="list-contents">
