Add: modal window (in progress)

--- a/subscribe.html
+++ b/subscribe.html
@@ -185,7 +185,7 @@
               <h1 class="heading-1 card__price">월 5,900원</h1>
               <p class="card__month">1개월권 [첫 달 0원]</p>
               <hr class="card__line" />
-              <a href="#" class="btn card__btn">멤버십 구독하기</a>
+              <a href="" class="btn card__btn">멤버십 구독하기</a>
             </div>
             <div class="card card--2">
               <div class="card__label">
@@ -196,7 +196,7 @@
               <div class="card__discount"><span>15%</span></div>
               <hr class="card__line" />
               <p class="card__notice">※ 3개월마다 15,000원 결제</p>
-              <a href="#" class="btn card__btn">멤버십 구독하기</a>
+              <a href="" class="btn card__btn">멤버십 구독하기</a>
             </div>
             <div class="card card--3">
               <h1 class="heading-1 card__price">월 4,100원</h1>
@@ -204,12 +204,27 @@
               <div class="card__discount"><span>30%</span></div>
               <hr class="card__line" />
               <p class="card__notice">※ 3개월마다 12,300원 결제</p>
-              <a href="#" class="btn card__btn">멤버십 구독하기</a>
+              <a href="" class="btn card__btn">멤버십 구독하기</a>
             </div>
           </div>
         </div>
       </section>
     </main>
+    <div class="modal-window">
+      <div class="modal-window__box">
+        <button class="btn-close modal-window__box__btn--close">&times;</button>
+        <p class="heading-4 modal-window__box__title">
+          회원님의 멤버십 구독을 환영합니다!
+        </p>
+        <p class="heading-5 modal-window__box__text">
+          휴머니즈와 함께 재밌게 똑똑해지세요.
+        </p>
+        <a href="#" class="btn modal-window__box__btn--mypage">
+          마이페이지로 이동
+        </a>
+      </div>
+    </div>
+    <div class="overlay"></div>
     <footer class="footer">
       <div class="footer__nav">
         <ul class="footer__list">
