Add: modal window

--- a/subscribe.html
+++ b/subscribe.html
@@ -210,7 +210,7 @@
         </div>
       </section>
     </main>
-    <div class="modal-window">
+    <div class="modal-window hidden">
       <div class="modal-window__box">
         <button class="btn-close modal-window__box__btn--close">&times;</button>
         <p class="heading-4 modal-window__box__title">
@@ -224,7 +224,7 @@
         </a>
       </div>
     </div>
-    <div class="overlay"></div>
+    <div class="overlay hidden"></div>
     <footer class="footer">
       <div class="footer__nav">
         <ul class="footer__list">
