--- a/about.html
+++ b/about.html
@@ -10,10 +10,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/resources/ui/jquery-ui.css" />
     <link rel="stylesheet" href="/resources/slick/slick.css" />
     <link rel="stylesheet" href="/resources/slick/slick-theme.css" />
     <title>Humaniz</title>
     <script src="/resources/lib/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="/resources/slick/slick.min.js"></script>
     <script src="/js/script.js"></script>
     <link
