--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/resources/ui/jquery-ui.css" />
     <link rel="stylesheet" href="/resources/slick/slick.css" />
     <link rel="stylesheet" href="/resources/slick/slick-theme.css" />
     <script src="/resources/lib/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="/resources/slick/slick.min.js"></script>
     <script src="/js/script.js"></script>
     <title>Humaniz</title>
@@ -188,7 +190,7 @@
         </div>
         <div class="slide">
           <img
-            src="/resources/img/slide-1.png"
+            src="/resources/img/notice.png"
             alt="Slide Photo 1"
             class="slide__img"
           />
@@ -201,7 +203,7 @@
         </div>
         <div class="slide">
           <img
-            src="/resources/img/slide-1.png"
+            src="/resources/img/event-1.png"
             alt="Slide Photo 1"
             class="slide__img"
           />
