--- a/list.html
+++ b/list.html
@@ -10,9 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/resources/ui/jquery-ui.css" />
     <link rel="stylesheet" href="/resources/slick/slick.css" />
     <link rel="stylesheet" href="/resources/slick/slick-theme.css" />
     <script src="/resources/lib/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="/resources/slick/slick.min.js"></script>
     <script defer src="/js/script.js"></script>
     <title>Humaniz</title>
@@ -175,19 +177,25 @@
             <a href="#" class="list-nav__main-menu__link">주제별</a>
             <ul class="list-nav__sub-menu">
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">동양철학</a>
+                <a href="#subject-1" class="list-nav__sub-menu__link"
+                  >동양철학</a
+                >
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">서양철학</a>
+                <a href="#subject-2" class="list-nav__sub-menu__link"
+                  >서양철학</a
+                >
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">고전</a>
+                <a href="#subject-3" class="list-nav__sub-menu__link">고전</a>
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">문학</a>
+                <a href="#subject-4" class="list-nav__sub-menu__link">문학</a>
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">교양인문학</a>
+                <a href="#subject-5" class="list-nav__sub-menu__link"
+                  >교양인문학</a
+                >
               </li>
             </ul>
           </div>
@@ -195,19 +203,19 @@
             <a href="#" class="list-nav__main-menu__link">연령별</a>
             <ul class="list-nav__sub-menu">
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">10대</a>
+                <a href="#age-1" class="list-nav__sub-menu__link">10대</a>
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">20대</a>
+                <a href="#age-2" class="list-nav__sub-menu__link">20대</a>
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">30대</a>
+                <a href="#age-3" class="list-nav__sub-menu__link">30대</a>
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">40대</a>
+                <a href="#age-4" class="list-nav__sub-menu__link">40대</a>
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">50대 이상</a>
+                <a href="#age-5" class="list-nav__sub-menu__link">50대 이상</a>
               </li>
             </ul>
           </div>
@@ -215,17 +223,19 @@
             <a href="#" class="list-nav__main-menu__link">테마별</a>
             <ul class="list-nav__sub-menu">
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link"
+                <a href="#theme-1" class="list-nav__sub-menu__link"
                   >미디어 속 인문학</a
                 >
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link"
+                <a href="#theme-2" class="list-nav__sub-menu__link"
                   >똑똑해지는 출근길</a
                 >
               </li>
               <li class="list-nav__sub-menu__item">
-                <a href="#" class="list-nav__sub-menu__link">고전 쉽게 읽기</a>
+                <a href="#theme-3" class="list-nav__sub-menu__link"
+                  >고전 쉽게 읽기</a
+                >
               </li>
             </ul>
           </div>
@@ -439,7 +449,9 @@
         </section>
         <section class="section-subject hidden">
           <h3 class="heading-3 section-subject__title">주제별</h3>
-          <h5 class="heading-5 section-subject__sub-title">동양철학</h5>
+          <h5 class="heading-5 section-subject__sub-title" id="subject-1">
+            동양철학
+          </h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -634,7 +646,9 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-subject__sub-title">서양철학</h5>
+          <h5 class="heading-5 section-subject__sub-title" id="subject-2">
+            서양철학
+          </h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -829,7 +843,9 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-subject__sub-title">고전</h5>
+          <h5 class="heading-5 section-subject__sub-title" id="subject-3">
+            고전
+          </h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -1024,7 +1040,9 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-subject__sub-title">문학</h5>
+          <h5 class="heading-5 section-subject__sub-title" id="subject-4">
+            문학
+          </h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -1219,7 +1237,9 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-subject__sub-title">교양인문학</h5>
+          <h5 class="heading-5 section-subject__sub-title" id="subject-5">
+            교양인문학
+          </h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -1417,7 +1437,7 @@
         </section>
         <section class="section-age hidden">
           <h3 class="heading-3 section-age__title">연령별</h3>
-          <h5 class="heading-5 section-age__sub-title">10대</h5>
+          <h5 class="heading-5 section-age__sub-title" id="age-1">10대</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -1612,7 +1632,7 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-age__sub-title">20대</h5>
+          <h5 class="heading-5 section-age__sub-title" id="age-2">20대</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -1807,7 +1827,7 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-age__sub-title">30대</h5>
+          <h5 class="heading-5 section-age__sub-title" id="age-3">30대</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -2002,7 +2022,7 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-age__sub-title">40대</h5>
+          <h5 class="heading-5 section-age__sub-title" id="age-4">40대</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -2197,7 +2217,7 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-age__sub-title">50대 이상</h5>
+          <h5 class="heading-5 section-age__sub-title" id="age-5">50대 이상</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -2395,7 +2415,7 @@
         </section>
         <section class="section-theme hidden">
           <h3 class="heading-3 section-theme__title">테마별</h3>
-          <h5 class="heading-5 section-theme__sub-title">미디어 속 인문학</h5>
+          <h5 class="heading-5 section-theme__sub-title" id="theme-1">미디어 속 인문학</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -2590,7 +2610,7 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-theme__sub-title">똑똑해지는 출근길</h5>
+          <h5 class="heading-5 section-theme__sub-title" id="theme-2">똑똑해지는 출근길</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
@@ -2785,7 +2805,8 @@
               </div>
             </div>
           </div>
-          <h5 class="heading-5 section-theme__sub-title">고전 쉽게 읽기</h5>
+          <h5 class="heading-5 section-theme__sub-title" id=
+          "theme-3">고전 쉽게 읽기</h5>
           <div class="list-contents">
             <div class="list-contents__box">
               <img
