--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/resources/slick/slick-theme.css" />
     <script src="/resources/lib/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="/resources/slick/slick.min.js"></script>
     <script defer src="/js/script.js"></script>
     <title>Humaniz</title>
     <link
@@ -95,13 +96,11 @@
     <div class="login">
       <div class="login__box">
         <div class="login__box__logo">
-          <a href="/" class="login__box__logo--link">
-            <img
-              src="/resources/img/logo-big.png"
-              alt="Login logo"
-              class="login__logo__img"
-            />
-          </a>
+          <img
+            src="/resources/img/logo-big.png"
+            alt="Login logo"
+            class="login__logo__img"
+          />
         </div>
         <form class="login__box__input">
           <input
