Add: Issuing event code

--- a/event.html
+++ b/event.html
@@ -185,9 +185,10 @@
 				<div class="event-code">
 					<p class="event-code__title">추천인 코드</p>
 					<input type="text" class="event-code__input" />
-					<button class="btn-submit event-code__btn">
+					<button class="btn-submit event-code__btn--default">
 						추천인 코드 발급받기
 					</button>
+					<p></p>
 				</div>
 				<div class="event-container">
 					<p class="event-container__title">참여방법</p>
