--- a/about.html
+++ b/about.html
@@ -13,6 +13,10 @@
 		<link rel="stylesheet" href="/resources/ui/jquery-ui.css" />
 		<link rel="stylesheet" href="/resources/slick/slick.css" />
 		<link rel="stylesheet" href="/resources/slick/slick-theme.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
 		<title>Humaniz</title>
 		<script src="/resources/lib/jquery-3.6.0.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
